# vscode-docter-preview

./: .gitignore  .vscodeignore  README.md  extension.js  package.json  preview.html  sidebar.html  traverse.js  webpack.config.js
docter-preview-zed/: Cargo.toml  INSTALLATION.md  MIGRATION.md  README.md  build.sh  check_build.sh  extension.toml  extension.wasm  test.sh
docter-preview-zed/examples/: endpoints.json  sample.mdx
docter-preview-zed/src/: lib.rs  main.rs
